# Nyanger

./: README.md  pyproject.toml
examples/: example.py  example_stat.py
src/nyanger/: __init__.py
src/nyanger/asynchronous/: __init__.py  nyan.py  static.py
src/nyanger/asynchronous/log_writers/: __init__.py  console_writer.py
src/nyanger/process/: __init__.py  nyan.py  static.py
src/nyanger/process/log_writers/: console_writer.py
src/nyanger/simple/: __init__.py  nyan.py  static.py
src/nyanger/simple/log_writers/: console_writer.py
