[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyanger"
version = "0.9.1"
authors = [
  { name="Kirill Harmatulla Shakirov", email="kirill.shakirov@protonmail.com" },
]
description = "Simple logger. Simple to use. Simple to modify."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]

[project.urls]
Homepage = "https://github.com/Nyanraltotlapun/Nyanger"
Issues = "https://github.com/Nyanraltotlapun/Nyanger/issues"